--- a/generator/templates/generator/password.html
+++ b/generator/templates/generator/password.html
@@ -15,7 +15,7 @@
             <h1>Your password is:</h1>
             <h2 class="alert alert-success password-alert">{{ password }}</h2>
             <div class="btn-group">
-                <a href="{% url 'home' %}" class="btn btn-warning">Home</a>
+                <a href="{% url 'home' %}" class="btn btn-info">Home</a>
                 <button id="copyButton" class="btn btn-primary btn-animate">Copy</button>
                 <button id="retryButton" class="btn btn-secondary btn-animate">Retry</button>
             </div>
